# datastar-axum-todolist

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/: app.css  app.ts  index.html
deploy/: docker-compose.yaml
deploy/data/authelia/: .gitignore
deploy/data/authelia/config/: configuration.yml  users_database.yml
migrations/: 000_create_database.sql
scripts/: generate-keys.sh  generate-password.sh  generate-secret.sh
src/: auth.rs  db.rs  lib.rs  main.rs  model.rs  routes.rs  state.rs
src/fragments/: mod.rs  note.rs
src/repository/: mod.rs  notes.rs
src/service/: auth.rs  mod.rs  note.rs
src/view/: index.rs  note.rs
templates/: index.html
templates/fragments/: app-bar.fragment.html  edit-note.fragment.html  new-note.fragment.html  note-list.fragment.html  note.fragment.html
