[package]
name = "datastar-axum-todolist"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.13.1"
async-stream = "0.3.6"
async-trait = "0.1.88"
axum = { version = "0.8.3", features = ["macros"] }
axum-login = "0.17.0"
biscuit = "0.7.0"
blake3 = "1.8.2"
chrono = "0.4.41"
datastar = { version = "0.1.3", features = ["axum"] }
dotenv = "0.15.0"
moka = { version = "0.12.10", features = ["future", "logging"] }
openid = "0.17.0"
#password-auth = { version = "1.0.0", features = ["argon2"] }
regex = "1.11.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite", "time", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower-default-headers = "0.2.0"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tower-sessions = { version = "0.14.0", features = ["signed"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
